--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+.button{
+    border-radius: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.prompt-input{
+    border: none;
+    background-color: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.prompt-input:focus{
+    border: none;
+    outline: none;
+    background-color: inherit;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.prompt-input-container{
+    background-color: #444444;
+    padding: 10px;
+    display: inline-block;
+    border-radius: 20px;
 }
