--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,49 +1,54 @@
-.submit-button{
-    outline:none;
-    border:none;
+.submit-button {
+    outline: none;
+    border: none;
     border-radius: 25px;
-    background-color: #616161;
-    color: white;
+    background-color: #ffffff;
+    color: black;
     font-size: 15px;
     font-weight: 700;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 40px;
+    margin-top: 10px;
+    align-self: center;
+    transition: background-color 0.2s ease;
     position: absolute;
-    right: 5px;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 10px;
+    transform: translateY(+50%);
 }
 
-.submit-button:hover{
+.submit-button:hover {
     background-color: #555555;
+    color: white;
+
 }
 
-.prompt-input{
+.prompt-input {
     border: none;
     background-color: inherit;
-    width: calc(100% - 50px);
+    color: white;
+    width: 100%;
+    font-size: 16px;
+    padding: 8px;
 }
 
-.prompt-input:focus{
-    border: none;
+.prompt-input:focus {
     outline: none;
-    background-color: inherit;
 }
 
-.prompt-input-container{
+.prompt-input-container {
     position: absolute;
     width: 500px;
-    bottom: 20px;
+    bottom: 40px;
     left: 50%;
-    background-color: #444444;
-    padding: 10px;
-    display: inline-block;
-    border-radius: 20px;
+    background-color: #252525;
+    padding: 30px;
+    border-radius: 10px;
     transform: translateX(-50%);
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    display: flex;
+    flex-direction: column;
 }
 
-body {
-    background: radial-gradient(circle at center, #1a1a1a 0%, #000 80%);
-    color: #fff;
-    font-family: 'JetBrains Mono', monospace;
+body{
+    background-color: #202020;
 }
