--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@
     transition: background-color 0.2s ease;
     position: absolute;
     right: 10px;
+    bottom: 30px;
     transform: translateY(+50%);
 }
 
@@ -29,6 +30,8 @@
     width: 100%;
     font-size: 16px;
     padding: 8px;
+    resize: none;
+    overflow: hidden;
 }
 
 .prompt-input:focus {
