improved the styling of the messages

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,10 +60,8 @@ body{
     background-color: #353535;
     color: white;
     border-radius: 10px;
-    position : absolute;
-    right:1px;
-    margin: 5px;
-    transform: translateX(-50%);
+    margin-left: 800px;
+    margin-bottom: 20px;
     padding:10px;
     font-family: "Segoe UI","Roboto", sans-serif;
 }
