--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -79,3 +79,22 @@ body{
 .messages{
     padding-bottom: 180px;
 }
+
+.choice{
+    background-color: #353535;
+    padding: 2px;
+    font-size:10px;
+    width: 100px;
+    border-radius: 10px;
+    border: none;
+    margin: 2px;
+    color: white;
+}
+
+.choice:hover{
+    background-color: #2c2c2c;
+}
+
+.choice.active{
+    background-color: #2c2c2c;
+}
